--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,16 @@
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/alura-spring-data
 spring.datasource.username=postgres
-spring.datasource.password=1234567
+spring.datasource.password=123456
+
+
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.hibernate.ddl-auto=create
 
 #Mostrar SQL no console
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+#Configuraçãoo do retorno de erros
+server.error.include-stacktrace=never
